# flet_cli

./: .gitignore  GITHUB_ACTIONS_GUIDE.md  GITHUB_ACTIONS_QUICK_REF.md  INTEGRATION_GUIDE.md  MANIFEST.in  QUICK_START.md  README.md  __init__.py  auto_update.py  cli.py  integrate_packn.py  integration_base.py  pyproject.toml  setup.py  version.py
.github/workflows/: auto-update.yml
commands/: packn.py
src/flet_cli/: __init__.py  cli.py
src/flet_cli/commands/: packn.py
