[project]
name = "flet-cli"
version = "0.80.1"
description = "Flet CLI with Nuitka packaging support for Windows"
authors = [{ name = "Appveyor Systems Inc.", email = "hello@flet.dev" }]
maintainers = [{ name = "LingyeSoul", email = "lingyesoul@users.noreply.github.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet",
    "watchdog >=4.0.0",
    "packaging >=25.0",
    "qrcode >=7.4.2",
    "toml >=0.10.2",
    "cookiecutter >=2.6.0"
]

[project.optional-dependencies]
nuitka = ["nuitka"]

[project.urls]
Homepage = "https://flet.dev"
Repository = "https://github.com/flet-dev/flet"
Documentation = "https://flet.dev/docs"

[project.entry-points."pyinstaller40"]
hook-dirs = "flet_cli.__pyinstaller:get_hook_dirs"

[project.scripts]
flet-cli = "flet_cli.cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["flet_cli", "flet_cli.*"]